Adds AND type filtering
